DDF-2644 Fix overlap issue with validation icon

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/upload-summary/upload-summary.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/upload-summary/upload-summary.less
@@ -58,7 +58,7 @@
     .files-issues {
         opacity: @minimumOpacity;
         transform: scale(1);
-        width: 1rem;
+        width: 1.2rem;
         text-align: center;
     }
 }
